--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,9 +1,6 @@
-<toolbar [title_page]='title_page' 
-        [loading]='loading.loading_page' 
-        [notificationsCount]='notificationsCount'></toolbar>
+<toolbar [title_page]='title_page'></toolbar>
 
-
-<ion-content class="theme-{{ app_var }}">
+<ion-content>
   <div class="subcontent" style="margin-top: 150px;">
 	<ion-card class="gardient-background card-med-angle">
 		<ion-card-content>
